fable/test/valid/unused_args.f
      subroutine sub(num, nums1, nums2)
      dimension nums1(2)
      dimension nums2(3, 4)
      end

      program prog
      call sub(1, 2, 3)
      end
