fable/test/semantic_error/dims_repeated_in_dimension.f
      program prog
      integer num(2)
      dimension num(2)
      end
